<resources>
    <string name="app_name">WebcamViewerWidget</string>
    <string name="linklist">Linklist</string>
    <string name="add_link">Add link</string>
    <string name="name">Name</string>
    <string name="link">Link</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="failed_to_add_link">Failed to add link!</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_link_sure">Delete link?</string>
    <string name="failed_to_delete_link">Failed to delete link!</string>
    <string name="reload">Reload</string>
    <string name="export_links">Export</string>
    <string name="import_links">Import</string>
    <string name="select_links_to_export">Select links to export</string>
    <string name="copied_to_clipboard">Copied to clipboard!</string>
    <string name="paste_exported_data">Paste exported data:</string>
    <string name="import_failed">Import failed</string>
    <string name="import_completed">Import completed</string>
    <string name="name_cant_contain">Name can\'t contain: </string>
    <string name="settings">Settings</string>
    <string name="auto_update_widget">Auto update widget</string>
    <string name="update_interval_in_min">Update interval (in minutes):</string>
    <string name="only_update_with_wifi">Only update with wifi</string>
    <string name="info_title">Information:</string>
    <string name="info_text">WebcamViewerWidget uses the following libraries:</string>
    <string name="information">Information</string>
    <string name="edit_link">Edit link:</string>
    <string name="save">Save</string>
    <string name="or">Or:</string>
    <string name="delete">Delete</string>
    <string name="edit_failed">Failed to edit link!</string>
    <string name="download_failed">Download failed</string>
    <string name="loading_failed">Loading failed</string>
    <string name="download_succeeded">Download succeeded</string>
    <string name="activated">Activated</string>
    <string name="edit">Edit</string>
    <string name="ready_with_editing">Ready</string>
    <string name="switch_widget">Switch Widget</string>
    <string name="config">Config</string>
    <string name="select_link">Select link</string>
    <string name="single_auto_update_widget">Single auto update widget</string>
    <string name="save_image_dialog_message">Do you want to save this image?</string>
    <string name="save_image_dialog_title">Save image?</string>
    <string name="image_saved">Image saved!</string>
    <string name="linklist_is_empty">You haven\'t added a link yet. Go to the main app to add one!</string>
    <string name="showcase_title_add_link">Add link</string>
    <string name="showcase_text_add_link">Click this button to add the first link</string>
    <string name="showcase_close">Close</string>
</resources>
