<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linklist_lv"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/linklist_btn_export"
        android:layout_below="@+id/linklist_btn_edit" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_links"
        android:id="@+id/linklist_btn_export"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/import_links"
        android:id="@+id/linklist_btn_import"
        android:layout_alignBottom="@+id/linklist_btn_export"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView"
        tools:text="@string/linklist"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white" />

    <Button
        android:text="@string/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linklist_btn_edit"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linklist_lv"
        android:id="@+id/linklist_btn_add"
        android:layout_toEndOf="@+id/linklist_btn_export"
        android:layout_toStartOf="@+id/linklist_btn_import"/>

</RelativeLayout>