<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:id="@+id/dialog_deletelink_btn_no"
        android:layout_alignTop="@+id/dialog_deletelink_btn_yes"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:id="@+id/dialog_deletelink_btn_yes"
        android:layout_below="@+id/dialog_deletelink_tv_title"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/dialog_deletelink_btn_no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/delete_link_sure"
        android:id="@+id/dialog_deletelink_tv_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>