<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_update_widget"
        android:id="@+id/settings_cb_auto_update_widget"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_auto_update_widget_layout"
        android:layout_below="@+id/settings_cb_auto_update_widget"
        android:visibility="gone"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/update_interval_in_min"
            android:id="@+id/settings_tv_interval_info"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/settings_et_auto_update_interval" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/settings_et_auto_update_interval"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/settings_tv_interval_info" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/only_update_with_wifi"
            android:id="@+id/settings_cb_only_update_with_wifi"
            android:layout_below="@+id/settings_tv_interval_info"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</RelativeLayout>